# astro-website

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  .temp.1668160439118.config.ts  README.md  TODO.md  ai-radar-complete.html  astro.config.mjs  astro.config.ts  broken-links  bun.lockb  clojure-in-vouch.adoc  editorial-board.md  editorial-process.md  eslint.config.js  feynman.md  lint_tags.bb  netlify.toml  package-lock.json  package.json  tailwind.config.cjs  the-pattern-matching-medicine-notes.md  tsconfig.json  vercel.json
.clj-kondo/: config.edn
.github/workflows/: test.yml
.husky/: pre-commit
.lsp/.cache/: db.transit.json
ai-radar/: JUXTAIRadar.html  index.html  style.css
ai-radar-generator/: .gitignore  PRINT-PDF-LESSONS.md  README.md  config.json  convert-to-cmyk.sh  generate.py  generate.sh  package.json  pyproject.toml  tsconfig.json
ai-radar-generator/profiles/: README.md
ai-radar-generator/scripts/: generate-radar.ts
ai-radar-generator/templates/: category-cover.html  cover.html  print-overrides.css  styles.css
ai-radar-generator/templates/_internal/: full-radar.html  radar-at-a-glance.html
ai-radar-generator/templates/pages/: contributors.html  introduction.html  thank-you.html
algolia/: .env  index.cljs  index.js  md-parser.js
netlify/functions/: xt26-register.ts
public/: ai-radar-complete.html  logmein-verification-code.txt  robots.txt
public/jobs/: app.json  (+8 more)
scripts/: check-blog-filenames.mjs  generate-ai-radar-docs.js  generate-ai-radar-docs.mjs
src/: algolia.css  blog.css  shiki-theme.css  utils.ts  utils.tsx
(+771 files in other folders)
