[project]
name = "ai-radar-generator"
version = "0.1.0"
description = "Generate JUXT AI Radar PDF from HTML templates"
requires-python = ">=3.9"
dependencies = [
    "weasyprint>=61.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
